--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 loglevel: debug
 adminchat: 
 botconfig: 
-  token: 5437936243:AAG8qSRApD7V90ZZUVDM4ze0bcRbUC1rbrE
+  token: 
   paytoken:
   timeout: 60
   debug: true
